[tool.poetry]
name = "imageclassification"
version = "0.1.0"
description = ""
authors = ["Joris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.18.0"
setuptools = "^75.6.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
keras = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
